# odp-assets

./: .env.example  .gcloudignore  .gitignore  README.md  cloudbuild.yaml  cloudbuild_cd.yaml  cloudbuild_ci.yaml  pyproject.toml
.cursor/commands/: check-api-to-gcs.md  check-dbt-models.md  check-gcs-to-bigquery.md  suggest-code-commit-message.md
.cursor/rules/: 00-overview.mdc  01-dagster-conventions.mdc  02-dbt-conventions.mdc  03-sql-conventions.mdc  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sh
dagster_project/: README.md  build-and-push.sh  pyproject.toml
dagster_project/dagster_project/: Dockerfile_dagster  Dockerfile_user_code  assets.py  dagster.yaml  dagster.yaml.production  definitions.py  docker-compose.yaml  project.py  startup.sh  workspace.local.yaml  workspace.yaml  workspace.yaml.production
dagster_project/dagster_project/assets/: __init__.py  kaggle_api_to_gcs.py
dagster_project/dagster_project/schedules/: schedules.db
dagster_project/dagster_project/storage/eb7eeb8d-6ddf-4b8e-98c5-6ee348b1a9af/compute_logs/: rwfyntrt.err  rwfyntrt.out
dagster_project/olist_data_portal/: dagster.yaml  definitions.py  resources.py  workspace.yaml
dagster_project/olist_data_portal/assets/: __init__.py  file_config.py  gcs_to_bigquery.py  kaggle_api_to_gcs.py  utils.py
deployments/: daemon.yaml  run-execution-job.yaml  user-code.yaml  webserver.yaml
gcp/: .gitignore  .terraform.lock.hcl  CI_CD_SERVICE_ACCOUNT.md  README.md  bigquery.tf  gcs.tf  iam.tf  main.tf  outputs.tf  service_account.tf  variables.tf  versions.tf
jaffle_shop/: dbt_project.yml  profiles.yml  requirements.in
odp/: dbt_project.yml  profiles.local.yml  profiles.local.yml.example  profiles.yml
terraform/: .gitignore  README.md
(+20 files in other folders)
