[project]
name = "dagster_project"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "kaggle",
    "google-cloud-storage",
    "python-dateutil",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "dagster_project"
