[project]
name = "dagster_project"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster",
    "dagster-postgres",
    "dagster-webserver",
    "kaggle",
    "kagglehub",
    "google-cloud-storage",
    "google-cloud-bigquery",
    "pandas",
    "pyarrow",
    "python-dateutil",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["olist_data_portal"]

[tool.dagster]
module_name = "olist_data_portal.definitions"
code_location_name = "olist_data_portal"

[dependency-groups]
dev = [
    "black>=25.11.0",
]
